[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/splash_menu/themes/splash_menu.theme" type="Theme" id=1]
[ext_resource path="res://ui/splash_menu/scripts/splash_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/GFX/Interface/PNG/metalPanel.png" type="Texture" id=3]

[node name="SplashMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
starting_button = NodePath("Background/VBoxContainer/NewGame")

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 460.0
margin_top = 240.0
margin_right = 1460.0
margin_bottom = 840.0
rect_min_size = Vector2( 1000, 600 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_top = 99.0
margin_right = 1000.0
margin_bottom = 171.0
text = "Heist Meisters"
align = 1

[node name="NewGame" type="Button" parent="Background/VBoxContainer"]
margin_left = 350.0
margin_top = 181.0
margin_right = 650.0
margin_bottom = 281.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "New Game"

[node name="Tutorial" type="Button" parent="Background/VBoxContainer"]
margin_left = 350.0
margin_top = 291.0
margin_right = 650.0
margin_bottom = 391.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Tutorial"

[node name="Quit" type="Button" parent="Background/VBoxContainer"]
margin_left = 350.0
margin_top = 401.0
margin_right = 650.0
margin_bottom = 501.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"
[connection signal="pressed" from="Background/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
